# PolyRustArb-BOT

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  USAGE_EXAMPLES.md  config.toml  derive_key.py  docker-compose.yml  file-context.md  generate_creds.py  requirements.txt  test_price_cache.sh  verify_hash.rs
.github/workflows/: build.yml
scripts/: generate_creds.py  monitor.sh  sign_order.py
src/: main.rs
src/binance/: mod.rs
src/bybit/: mod.rs
src/config/: mod.rs
src/polymarket/: client.rs  mod.rs  types.rs  websocket.rs
src/trading/: engine.rs  mod.rs  strategy.rs  types.rs
src/utils/: logging.rs  mod.rs  pnl.rs  rebates.rs  simulation.rs
